Update Spring to 6.2 (managed by Spring Boot 3.4.1)