@@ -104,12 +104,12 @@ public class WeatherHour {
 	}
 	
 	private static String toHourstamp(Calendar cal) {
-		return String.format("%4d%02d%02d%02d",
+		return "%4d%02d%02d%02d".formatted(
 				Integer.valueOf(cal.get(Calendar.YEAR)),
-				Integer.valueOf(cal.get(Calendar.MONTH)+1),
+				Integer.valueOf(cal.get(Calendar.MONTH) + 1),
 				Integer.valueOf(cal.get(Calendar.DAY_OF_MONTH)),
-				Integer.valueOf(cal.get(Calendar.HOUR_OF_DAY)+1)
-				);
+				Integer.valueOf(cal.get(Calendar.HOUR_OF_DAY) + 1)
+		);
 	}
 
 	public static String toDay(String hourstamp) {
